# focus

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  justfile
.github/workflows/: verify_build.yaml
assets/: app.css  font-switcher.js  theme-switcher.js  themes.css
posts/: 2025-12-08-How to make a fast website.md  2025-12-08-my-first-post.md  2025-12-08-second-post.md  2025-12-08-third-post.md  2025-12-12-My-own-world.md
src/: config.rs  main.rs
src/routes/: mod.rs  technical.rs
src/view/: about.rs  icons.rs  mod.rs  navbar.rs
